cmake_minimum_required (VERSION 3.9.0)
if (POLICY CMP0111)
cmake_policy(SET CMP0111 OLD)
endif ()
project (raids)
include_directories (
include
${CMAKE_SOURCE_DIR}/raimd/include
${CMAKE_SOURCE_DIR}/raikv/include
${CMAKE_SOURCE_DIR}/libdecnumber/include
${CMAKE_SOURCE_DIR}/raimd/libdecnumber/include
${CMAKE_SOURCE_DIR}/linecook/include
${CMAKE_SOURCE_DIR}/rdbparser/include
${CMAKE_SOURCE_DIR}/pcre2
${CMAKE_SOURCE_DIR}/h3/src/h3lib/include
${CMAKE_SOURCE_DIR}/h3/src/h3lib
)
if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
add_definitions(/DPCRE2_STATIC)
if ($<CONFIG:Release>)
add_compile_options (/arch:AVX2 /GL /std:c11 /wd5105)
else ()
add_compile_options (/arch:AVX2 /std:c11 /wd5105)
endif ()
if (NOT TARGET pcre2-8-static)
add_library (pcre2-8-static STATIC IMPORTED)
set_property (TARGET pcre2-8-static PROPERTY IMPORTED_LOCATION_DEBUG ../pcre2/build/Debug/pcre2-8-staticd.lib)
set_property (TARGET pcre2-8-static PROPERTY IMPORTED_LOCATION_RELEASE ../pcre2/build/Release/pcre2-8-static.lib)
add_library (pcre2-32-static STATIC IMPORTED)
set_property (TARGET pcre2-32-static PROPERTY IMPORTED_LOCATION_DEBUG ../pcre2/build/Debug/pcre2-32-staticd.lib)
set_property (TARGET pcre2-32-static PROPERTY IMPORTED_LOCATION_RELEASE ../pcre2/build/Release/pcre2-32-static.lib)
include_directories (../pcre2/build)
else ()
include_directories (${CMAKE_BINARY_DIR}/pcre2)
endif ()
set (pcre2lib pcre2-8-static pcre2-32-static)
if (NOT TARGET raikv)
add_library (raikv STATIC IMPORTED)
set_property (TARGET raikv PROPERTY IMPORTED_LOCATION_DEBUG ../raikv/build/Debug/raikv.lib)
set_property (TARGET raikv PROPERTY IMPORTED_LOCATION_RELEASE ../raikv/build/Release/raikv.lib)
endif ()
if (NOT TARGET raimd)
add_library (raimd STATIC IMPORTED)
set_property (TARGET raimd PROPERTY IMPORTED_LOCATION_DEBUG ../raimd/build/Debug/raimd.lib)
set_property (TARGET raimd PROPERTY IMPORTED_LOCATION_RELEASE ../raimd/build/Release/raimd.lib)
endif ()
if (NOT TARGET decnumber)
add_library (decnumber STATIC IMPORTED)
set_property (TARGET decnumber PROPERTY IMPORTED_LOCATION_DEBUG ../raimd/libdecnumber/build/Debug/decnumber.lib)
set_property (TARGET decnumber PROPERTY IMPORTED_LOCATION_RELEASE ../raimd/libdecnumber/build/Release/decnumber.lib)
endif ()
if (NOT TARGET rdbparser)
add_library (rdbparser STATIC IMPORTED)
set_property (TARGET rdbparser PROPERTY IMPORTED_LOCATION_DEBUG ../rdbparser/build/Debug/rdbparser.lib)
set_property (TARGET rdbparser PROPERTY IMPORTED_LOCATION_RELEASE ../rdbparser/build/Release/rdbparser.lib)
endif ()
if (NOT TARGET linecook)
add_library (linecook STATIC IMPORTED)
set_property (TARGET linecook PROPERTY IMPORTED_LOCATION_DEBUG ../linecook/build/Debug/linecook.lib)
set_property (TARGET linecook PROPERTY IMPORTED_LOCATION_RELEASE ../linecook/build/Release/linecook.lib)
endif ()
if (NOT TARGET h3)
add_library (h3 STATIC IMPORTED)
set_property (TARGET h3 PROPERTY IMPORTED_LOCATION_DEBUG ../h3/build/bin/Debug/h3.lib)
set_property (TARGET h3 PROPERTY IMPORTED_LOCATION_RELEASE ../h3/build/bin/Release/h3.lib)
else ()
include_directories (${CMAKE_BINARY_DIR}/src/h3lib/include)
endif ()
if (NOT TARGET lzf)
add_library (lzf STATIC IMPORTED)
set_property (TARGET lzf PROPERTY IMPORTED_LOCATION_DEBUG ../rdbparser/lzf/build/Debug/lzf.lib)
set_property (TARGET lzf PROPERTY IMPORTED_LOCATION_RELEASE ../rdbparser/lzf/build/Release/lzf.lib)
endif ()
else ()
add_compile_options (-Wall -Wextra -Werror -ggdb -O3 -mavx -maes -fno-omit-frame-pointer)
if (TARGET pcre2-8-static)
include_directories (${CMAKE_BINARY_DIR}/pcre2)
set (pcre2lib pcre2-8-static pcre2-32-static)
else ()
set (pcre2lib -lpcre2-32 -lpcre2-8)
endif ()
if (NOT TARGET raikv)
add_library (raikv STATIC IMPORTED)
set_property (TARGET raikv PROPERTY IMPORTED_LOCATION ../raikv/build/libraikv.a)
endif ()
if (NOT TARGET raimd)
add_library (raimd STATIC IMPORTED)
set_property (TARGET raimd PROPERTY IMPORTED_LOCATION ../raimd/build/libraimd.a)
endif ()
if (NOT TARGET decnumber)
add_library (decnumber STATIC IMPORTED)
set_property (TARGET decnumber PROPERTY IMPORTED_LOCATION ../raimd/libdecnumber/build/libdecnumber.a)
endif ()
if (NOT TARGET rdbparser)
add_library (rdbparser STATIC IMPORTED)
set_property (TARGET rdbparser PROPERTY IMPORTED_LOCATION ../rdbparser/build/librdbparser.a)
endif ()
if (NOT TARGET linecook)
add_library (linecook STATIC IMPORTED)
set_property (TARGET linecook PROPERTY IMPORTED_LOCATION ../linecook/build/liblinecook.a)
endif ()
if (NOT TARGET h3)
add_library (h3 STATIC IMPORTED)
set_property (TARGET h3 PROPERTY IMPORTED_LOCATION ../h3/build/lib/libh3.a)
else ()
include_directories (${CMAKE_BINARY_DIR}/src/h3lib/include)
endif ()
if (NOT TARGET lzf)
add_library (lzf STATIC IMPORTED)
set_property (TARGET lzf PROPERTY IMPORTED_LOCATION ../rdbparser/lzf/build/liblzf.a)
endif ()
endif ()
if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
set (ex_lib ws2_32)
else ()
set (ex_lib -lpthread -lrt)
endif ()
add_definitions (-DDS_VER=1.6.0-54 -DGIT_HEAD=553ab844)
add_library (raids STATIC src/ev_service.cpp src/ev_http.cpp src/ev_client.cpp src/shm_client.cpp src/redis_msg.cpp src/redis_cmd_db.cpp src/redis_exec.cpp src/redis_keyspace.cpp src/redis_geo.cpp src/redis_hash.cpp src/redis_hyperloglog.cpp src/redis_key.cpp src/redis_list.cpp src/redis_pubsub.cpp src/redis_script.cpp src/redis_set.cpp src/redis_sortedset.cpp src/redis_stream.cpp src/redis_string.cpp src/redis_transaction.cpp src/redis_rdb.cpp src/redis_server.cpp src/redis_api.cpp src/ev_memcached.cpp src/memcached_exec.cpp src/term.cpp)
link_libraries (raids raikv raimd decnumber rdbparser linecook h3 lzf ${pcre2lib} ${ex_lib})
if (NOT CMAKE_SYSTEM_NAME STREQUAL "Windows")
add_executable (ds_client test/cli.cpp)
endif ()
add_executable (ds_server src/server.cpp)
add_executable (test_rmsg test/test_msg.cpp)
add_executable (redis_cmd src/redis_cmd.cpp)
add_executable (test_rcmd test/test_cmd.cpp)
add_executable (test_rlist test/test_list.cpp)
add_executable (test_rhash test/test_hash.cpp)
add_executable (test_rset test/test_set.cpp)
add_executable (test_rzset test/test_zset.cpp)
add_executable (test_hllnum test/test_hllnum.cpp)
add_executable (test_hllw test/test_hllw.cpp)
add_executable (test_hllsub test/test_hllsub.cpp)
add_executable (test_rgeo test/test_geo.cpp)
add_executable (test_rdecimal test/test_decimal.cpp)
add_executable (test_rping test/test_ping.cpp)
add_executable (test_rsub test/test_sub.cpp)
add_executable (test_rpub test/test_pub.cpp)
add_executable (test_rstream test/test_stream.cpp)
add_executable (ds_test_api test/test_api.c)
add_executable (ds_pubsub_api test/pubsub_api.c)
